--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -18,13 +18,7 @@ knitr::opts_chunk$set(
 
 ```
 
-
-Detach the package
-```{r package-management}
-# unload if this package is in use previously
-detach("package:aLBI", unload = TRUE)
-```
-
+options(repos = c(CRAN = "https://cran.rstudio.com"))
 
 Introduction
 This vignette provides an overview of the aLBI package...
@@ -32,49 +26,64 @@ This vignette provides an overview of the aLBI package...
 Installation
 You can install the package from GitHub using devtools:
 
-```{r installing package }
+```{r installing_package }
 # Install devtools if you haven't already
-install.packages("devtools")
-
-# Install the Fish StockAssessment package
-devtools::install_github("Ataher76/aLBI")
+if (!requireNamespace("devtools", quietly = TRUE)) {
+  install.packages("devtools")
+}
 
 ```
 
-Load the Package in your R session
+Detach or remove the package if previously attached
+```{r package_management}
+# unload if this package is in use previously
+if ("aLBI" %in% rownames(installed.packages())) {
+  detach("package:aLBI", unload = TRUE)
+}
 
-```{r calling library}
+# or remove the existing package by following code
+if ("aLBI" %in% rownames(installed.packages())) {
+  remove.packages("aLBI")
+}
+
+```
+
+Install and Load the Package in your R session
+
+```{r calling_library}
+# Install the Fish StockAssessment package
+devtools::install_github("Ataher76/aLBI")
+
+# Load the aLBI package
 library(aLBI)
+
 ```
 
 
 Data Preparation
 Prepare your data in a specific format before using the functions. Ensure the data frame has two columns: Length and Frequency. Here's an example of how to load and prepare your data using the readxl package:
 
-```{r data-preparation}
+```{r data_preparation}
 library(readxl)
 
 # Load your length-frequency data
-data <- read_excel("path/to/your/LengthFrequencydata.xlsx")
+data <- read_excel("D:/Academic/Fourth Year/Term paper/R package/Code/Excel/LC.xlsx", sheet = 2)
 
+# replace with your data directory
 ```
 
 Function: FishPar
 The FishPar function estimates biological parameters such as Lmax, Linf, Lmat, and Lopt using bootstrapping resampling method.
 
-Usage:
-
-```{r FishPar use}
-FishPar(data, resample = 1000, progress = TRUE)
-
-```
 Arguments
+
 data: A data frame containing Length and Frequency columns.
 resample: Number of bootstrap resamples. Default is 1000.
 progress: Logical value indicating whether to show progress. Default is TRUE.
 
 Example
-```{r FishPar Example}
+
+```{r FishPar_Example}
 # Running the FishPar function
 results <- FishPar(data = data, resample = 1000, progress = TRUE)
 
@@ -102,11 +111,6 @@ Pobj: Objective percentage combining Pmat, Popt, and Pmega.
 Function: FishSS
 The FishSS function evaluates stock status using criteria based on the estimated parameters.
 
-Usage
-```{r FishSS use}
-FishSS(data, LM_ratio, Pobj, Pmat, Popt)
-
-```
 Arguments
 data: A data frame of the stock status according to Cope and Punt (2009).
 LM_ratio: Length at maturity ratio from FishPar function.
@@ -115,9 +119,10 @@ Pmat: Percentage of mature fish.
 Popt: Percentage of optimal fish.
 
 Example
-```{r FishSS example}
+
+```{r FishSS_Example}
 # Load the stock status criteria data
-cpdata <- read_excel("path/to/your/Cope_and_Punt_Table.xlsx")
+cpdata <- read_excel("D:/Academic/Fourth Year/Term paper/R package/Code/Excel/PT.xlsx")
 
 # Running the FishSS function
 stock_status <- FishSS(data = cpdata,
@@ -130,11 +135,16 @@ stock_status <- FishSS(data = cpdata,
 stock_status
 
 ```
+
+
+
+
+
 Output
 The function returns a named vector with TSB40 and LSB25 values indicating stock status.
 
 Conclusion
-The FishStockAssessment package provides a robust framework for estimating biological parameters and assessing fish stock status. By following the steps outlined in this vignette, you can effectively utilize this package for your fish stock assessment needs.
+The Fish Stock Assessment package provides a robust framework for estimating biological parameters and assessing fish stock status. By following the steps outlined in this vignette, you can effectively utilize this package for your fish stock assessment needs.
 
 Additional Information
 Contact
