--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -8,7 +8,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-# Simple R Package for Fish Stock Assessment
+# aLBI: A Simple R Package for Fish Stock Assessment
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
@@ -18,6 +18,13 @@ knitr::opts_chunk$set(
 )
 
 options(repos = c(CRAN = "https://cran.rstudio.com"))
+
+# Load the aLBI package (required for vignette to access functions)
+library(aLBI)
+
+# Suppress warnings during vignette build for cleaner output
+suppressPackageStartupMessages(library(dplyr))
+suppressPackageStartupMessages(library(readxl))
 ```
 
 ## Introduction
